--- a/Qi_simulation/Qi's 2d Simulation.Rmd
+++ b/Qi_simulation/Qi's 2d Simulation.Rmd
@@ -5,14 +5,14 @@ date: "2023-04-27"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
+```{r include=FALSE}
 rm(list = ls())
 knitr::opts_chunk$set(echo = TRUE)
 library(ggplot2)
 library(reticulate)
 library(keras)
 library(tensorflow)
-library(sp)
+library(sp)r 
 library(fields)
 library(FRK)
 use_condaenv("tf_gpu")
@@ -557,6 +557,7 @@ crps_dnn_all <- crps(pred_dnn,y)
 crps_dk_all <- crps(pred_dk,y)
 crps_ck_all <- crps(pred_ck,y)
 crps_inla_all <- crps(pred_inla,y)
+library(ggforce)
 
 ggplot(data = reshape2::melt(as.data.frame(cbind(crps_dnn_all,crps_dk_all,crps_ck_all,crps_inla_all))), aes(x = variable, y = -value, fill = variable)) +
   geom_boxplot() +
@@ -637,9 +638,57 @@ print(paste("Interval Score of INLA is: ", mean(int_score_inla )))
 # Add uncertainty surface
 # Write all three datasets
 
+pred_dnn <- as.matrix(read.csv("D:/77/Reasearch/temp/dnn_pred_eh.csv"))
+pred_dk <- as.matrix(read.csv("D:/77/Reasearch/temp/dk_pred_eh.csv"))
+pred_ck <- as.matrix(read.csv("D:/77/Reasearch/temp/ck_pred_eh.csv"))
+pred_inla <- as.matrix(read.csv("D:/77/Reasearch/temp/inla_pred_eh.csv"))
+
+
+long_grid = lat_grid <- seq(from = -100, to = 100, length.out = sim_size)
+
+y <- as.vector(outer(X = long_grid, Y = lat_grid, FUN = Vectorize(egg_fun)))
+
+long <- expand.grid(long_grid, lat_grid)[,1]
+lat <- expand.grid(long_grid, lat_grid)[,2]
 
 ggplot() +
-  geom_raster(aes(x = long, y = lat, fill = y))
+  geom_raster(aes(x = long, y = lat, fill = y)) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_dnn, 1, mean))) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_dk, 1, mean))) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_ck, 1, mean))) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_inla, 1, mean))) +
+  scale_fill_viridis()
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_dnn, 1, sd))) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_dk, 1, sd))) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_ck, 1, sd))) +
+  scale_fill_viridis()
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_inla, 1, sd))) +
+  scale_fill_viridis()
+
+
 ```
 
 
