--- a/Qi_simulation/Qi's 2d Simulation.Rmd
+++ b/Qi_simulation/Qi's 2d Simulation.Rmd
@@ -515,11 +515,6 @@ write.csv(as.data.frame(pred_dk),"D:/77/Reasearch/temp/dk_pred_eh.csv",row.names
 write.csv(as.data.frame(pred_ck),"D:/77/Reasearch/temp/ck_pred_eh.csv",row.names = FALSE)
 write.csv(as.data.frame(pred_inla),"D:/77/Reasearch/temp/inla_pred_eh.csv",row.names = FALSE)
 
-write.csv(as.data.frame(pred_empty_area_dnn),"D:/77/Reasearch/temp/dnn_pred_empty_area_eh.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_empty_area_dk),"D:/77/Reasearch/temp/dk_pred_empty_area_eh.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_empty_area_ck),"D:/77/Reasearch/temp/ck_pred_empty_area_eh.csv",row.names = FALSE)
-write.csv(as.data.frame(pred_empty_area_inla),"D:/77/Reasearch/temp/inla_pred_empty_area_eh.csv",row.names = FALSE)
-
 
 ```
 # CRPS Calculation
@@ -673,6 +668,8 @@ y <- as.vector(outer(X = long_grid, Y = lat_grid, FUN = Vectorize(egg_fun)))
 long <- expand.grid(long_grid, lat_grid)[,1]
 lat <- expand.grid(long_grid, lat_grid)[,2]
 
+# mean -------------------------------------------------------------------------------------
+
 ggplot() +
   geom_raster(aes(x = long, y = lat, fill = y)) +
   scale_fill_viridis()
@@ -693,6 +690,7 @@ ggplot() +
   geom_raster(aes(x = long, y = lat, fill = apply(pred_inla, 1, mean))) +
   scale_fill_viridis()
 
+# uncertainty --------------------------------------------------------------------------------
 
 ggplot() +
   geom_raster(aes(x = long, y = lat, fill = apply(pred_dnn, 1, sd))) +
@@ -709,6 +707,98 @@ ggplot() +
 ggplot() +
   geom_raster(aes(x = long, y = lat, fill = apply(pred_inla, 1, sd))) +
   scale_fill_viridis()
+
+
+
+# mean with empty block------------------------------------------------------------------
+
+
+long <- expand.grid(long_grid, lat_grid)[,1]
+lat <- expand.grid(long_grid, lat_grid)[,2]
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_dnn, 1, mean))) +
+  scale_fill_viridis() +
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+  
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_dk, 1, mean))) +
+  scale_fill_viridis()+
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_ck, 1, mean))) +
+  scale_fill_viridis()+
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_inla, 1, mean))) +
+  scale_fill_viridis() +
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+  
+
+
+
+
+# uncertainty with empty block------------------------------------------------------------------
+
+
+long <- expand.grid(long_grid, lat_grid)[,1]
+lat <- expand.grid(long_grid, lat_grid)[,2]
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_dnn, 1, sd))) +
+  scale_fill_viridis() +
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+  
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_dk, 1, sd))) +
+  scale_fill_viridis()+
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_ck, 1, sd))) +
+  scale_fill_viridis()+
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+
+
+ggplot() +
+  geom_raster(aes(x = long, y = lat, fill = apply(pred_empty_area_inla, 1, sd))) +
+  scale_fill_viridis() +
+  geom_line(aes(x = c(60,80),y = c(0,0)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,80),y = c(50,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(60,60),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") +
+  geom_line(aes(x = c(80,80),y = c(0,50)), color = "red", linewidth = 0.5, linetype = "dashed") 
+  
+
 
 
 ```
